--- a/HairSalon/Views/Client/Edit.cshtml
+++ b/HairSalon/Views/Client/Edit.cshtml
@@ -2,18 +2,18 @@
   Layout = "_Layout";
 }
 
-@model ToDoList.Models.Item
+@model HairSalon.Models.Client
 
 <h2>Edit</h2>
 
-<h4>Edit this item: @Html.DisplayFor(model => model.Description)</h4>
+<h4>Edit this Client: @Html.DisplayFor(model => model.Name)</h4>
 
 @using (Html.BeginForm())
 {
-    @Html.HiddenFor(model => model.ItemId)
+    @Html.HiddenFor(model => model.ClientId)
 
-    @Html.LabelFor(model => model.Description)
-    @Html.EditorFor(model => model.Description)
+    @Html.LabelFor(model => model.Name)
+    @Html.EditorFor(model => model.Name)
 
     <input type="submit" value="Save" />
 }
