--- a/HairSalon/Views/Client/Create.cshtml
+++ b/HairSalon/Views/Client/Create.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model Hairsalon.Models.Client
+@model HairSalon.Models.Client
 
 <h4>Add a new client</h4>
 @using (Html.BeginForm())
@@ -11,4 +11,4 @@
   @Html.TextBoxFor(model => model.Name)
   <input type="submit" value="Add new client" />
 }
-<p>@Html.ActionLink("Show all items", "Index")</p>
+<p>@Html.ActionLink("Show all Clients", "Index")</p>
