--- a/HairSalon/Views/Stylist/Index.cshtml
+++ b/HairSalon/Views/Stylist/Index.cshtml
@@ -2,4 +2,19 @@
   Layout = "_Layout";
 }
 
+@using HairSalon.Models;
+
+<h1>Stylists</h1>
+
+@if (@Model.Count == 0)
+{
+  <h3>No stylists available!</h3>
+} 
+
+@foreach (Stylist stylist in Model)
+{
+  <li>@Html.ActionLink($"{stylist.Name}", "Details", new { id = stylist.StylistId })</li>
+}
+
+<p>@Html.ActionLink("Add a new Stylist", "Create")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
