--- a/HairSalon/Views/Client/Create.cshtml
+++ b/HairSalon/Views/Client/Create.cshtml
@@ -4,11 +4,16 @@
 
 @model HairSalon.Models.Client
 
+<p><strong>NOTE:</strong> A stylist is needed before a client can be added</p>
+<p>Go to @Html.ActionLink("this page", "Create", "Stylist") to hire a stylist.</p>
+
 <h4>Add a new client</h4>
 @using (Html.BeginForm())
 {
   @Html.LabelFor(model => model.Name)
   @Html.TextBoxFor(model => model.Name)
+  @Html.LabelFor(model => model.Stylist)
+  @Html.DropDownList("StylistId")
   <input type="submit" value="Add new client" />
 }
 <p>@Html.ActionLink("Show all Clients", "Index")</p>
