--- a/HairSalon/Views/Client/Details.cshtml
+++ b/HairSalon/Views/Client/Details.cshtml
@@ -10,4 +10,4 @@
 <h3>@Html.DisplayNameFor(model => model.Stylist): @Html.DisplayFor(model => model.Stylist.Name)<h3>
     <p>@Html.ActionLink("Edit Client", "Edit", new { id = Model.ClientId })</p>
     <p>@Html.ActionLink("Remove Client", "Delete", new { id = Model.ClientId })</p>
-    <p>@Html.ActionLink("Back to list", "Index")</p>
+    <p>@Html.ActionLink("Back to list of all Clients", "Index")</p>
