--- a/HairSalon/Views/Stylist/Details.cshtml
+++ b/HairSalon/Views/Stylist/Details.cshtml
@@ -11,7 +11,8 @@
 
 @if (@Model.Clients.Count == 0)
 {
-  <h3>No clients have been added to this category yet!</h3>
+  <h3>No clients have been added to this stylist yet!</h3>
+  <p>@Html.ActionLink("Add Client", "Create", "Client")</p>
 } 
 else
 {
@@ -19,11 +20,11 @@ else
   <ul>
     @foreach (Client client in Model.Clients)
     {
-      <li>@Html.ActionLink($"{client.Name}", "Details", "Clients", new { id = client.ClientId })</li>
+      <li>@Html.ActionLink($"{client.Name}", "Details", "Client", new { id = client.ClientId })</li>
     }
   </ul>
 }
-<h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)<h3>
+    <p>@Html.ActionLink("Add Client", "Create", "Client")</p>
     <p>@Html.ActionLink("Edit Stylist", "Edit", new { id = Model.StylistId })</p>
     <p>@Html.ActionLink("Remove Stylist", "Delete", new { id = Model.StylistId })</p>
     <p>@Html.ActionLink("Back to list", "Index")</p>
